# mlvtools-tutorial

./: .gitignore  LICENSE  Makefile  README.md  download_data.py  modify_input_data.py  requirements.txt  requirements.yml  setup.cfg  setup.py
.github/: CODEOWNERS
resources/: 01_Extract_dataset.ipynb  02_Tokenize_text.ipynb  03_Classify_text.ipynb  03_bis_Classify_text.ipynb  04_Evaluate_model.ipynb  05_Tune_hyperparameters_with_crossvalidation.ipynb
resources/dummy/: dummy_pipeline_feed.txt  dummy_pipeline_feed_2.txt  dummy_pipeline_feed_3.txt  step1_sanitize_data.ipynb  step2_split_data.ipynb  step3_convert_binaries.ipynb  step4_convert_octals.ipynb  step5_sort_data.ipynb
resources/dvc_playground/: docker-compose.yml
resources/dvc_playground/remote_dvc/: Dockerfile  pub_key
resources/dvc_playground/remote_git/: Dockerfile  pub_key
resources/dvc_playground/user/: Dockerfile  dvc_init_repo.sh  private_key
resources/setup_project/docker/: Dockerfile  run.sh
resources/setup_project/project/: .gitignore  Makefile  requirements.txt  setup.py
talks/pyConLT/: img  presentation.html
talks/pyData/: draft.md  dvc.html  notebooks.html  overview.md  presentation.html
talks/pyDataAmsterdam/tutorial/: dvc.html  presentation.html
talks/resources/gen_dvc/: dvc_cmd  extract_dataset.py
talks/resources/mlv_convert/: extract_dataset.ipynb  extract_dataset.py  (+1 more)
talks/tutorial/: presentation.html
tutorial/: dummy.md  dvc_overview.md  dvc_playground.md  pipeline_features.md  setup.md  setup_project.md  use_case1.md  use_case2.md  use_case3.md  use_case4.md
(+35 files in other folders)
