[metadata]
name=mlv-tools-tutorial
version=0.1
license_file = LICENSE
description = A POC to link them all (DVC, MLflow, MLV-tools).
long_description = file: README.md
long_description_content_type = text/markdown
author = PeopleDoc
author_email = sarah.diot-girard@people-doc.com
url = http://github.com/peopledoc/mlv-tools-tutorial
keywords = peopledoc, machine learning, versioning, automate, MLV-tools, DVC, MLflow
classifiers =
    Programming Language :: Python :: 3
python_requires = >=3.6
